import { beforeAll, describe, expect, it } from "@jest/globals";

import { gamedata } from "#/xrf-cli/test/constants";
import { Sandbox, sha, type CliResult } from "#/xrf-cli/test/sandbox";

const DESCRIPTION = gamedata("configs/ui/textures_descr/ui_test_sheet.xml");
const SHEET = gamedata("textures/ui/ui_test_sheet.dds");

describe("description sprite roundtrip", () => {
  const box = new Sandbox(__filename);

  let unpack: CliResult;
  let pack: CliResult;
  let info: CliResult;

  beforeAll(() => {
    // The description names four 64x64 regions of a 256x64 sheet, so unpacking yields four files
    // under the sheet's own directory.
    unpack = box.run("sprite unpack-description", [
      "--description",
      DESCRIPTION,
      "--base",
      gamedata("textures"),
      "--output",
      box.at("unpacked"),
      "--report",
      box.at("unpack.json"),
    ]);

    // The description names the sheet under ui/, so packing must create that output subdirectory.
    pack = box.run("sprite pack-description", [
      "--description",
      DESCRIPTION,
      "--base",
      box.at("unpacked"),
      "--output",
      box.at("packed"),
      "--report",
      box.at("pack.json"),
    ]);

    info = box.run("dds info", ["--path", box.at("packed/ui/ui_test_sheet.dds")]);
  });

  it("should unpack every described region", () => {
    expect(unpack).toMatchSnapshot();
  });

  it("should pack the regions back into a sheet", () => {
    expect(pack).toMatchSnapshot();
  });

  it("should report the description packing and unpacking inputs as readable documents", () => {
    expect(box.json("unpack.json")).toMatchSnapshot();
    expect(box.json("pack.json")).toMatchSnapshot();
  });

  // The sheet is re-encoded rather than reassembled from the original blocks, so the roundtrip is
  // lossy at the byte level even though every region is the right size and position.
  it("should not reproduce the sheet byte for byte", () => {
    expect(box.sha("packed/ui/ui_test_sheet.dds")).not.toBe(sha(SHEET));
  });

  it("should describe the repacked sheet the same way", () => {
    expect(info).toMatchSnapshot();
  });

  it("should write the expected files", () => {
    expect(box.manifest({ normalized: ["unpack.json", "pack.json"] })).toMatchSnapshot();
  });
});
