// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`description sprite roundtrip should describe the repacked sheet the same way 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read dds file <sandbox>/packed/ui/ui_test_sheet.dds",
    "File size: 16512 (16.1 KB)",
    "Metadata size: 128",
    "Data size: 16384 (16 KB)",
    "Size: 256 x 64",
    "Mipmap: 1 - 16",
    "Linear size: 16384",
    "Block size: 16",
    "D3D format: DXT5",
  ],
}
`;

exports[`description sprite roundtrip should pack the regions back into a sheet 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Packing for 1 files",
    "Packed 1 files",
  ],
}
`;

exports[`description sprite roundtrip should report the description packing and unpacking inputs as readable documents 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "unpack-description",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "base": "<resources>/gamedata/textures",
    "description": "<resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "destination": "<sandbox>/unpacked",
    "files": [],
    "isStrict": false,
  },
}
`;

exports[`description sprite roundtrip should report the description packing and unpacking inputs as readable documents 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "pack-description",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "base": "<sandbox>/unpacked",
    "description": "<resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "destination": "<sandbox>/packed",
    "files": [],
    "isStrict": false,
  },
}
`;

exports[`description sprite roundtrip should unpack every described region 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/unpacked",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`description sprite roundtrip should write the expected files 1`] = `
[
  {
    "path": "pack.json",
    "sha256": "1198a27a62d271c70fd0687e5f4819ba09c1d75b59b0bc2e4db367444dcad4e6",
    "size": 735,
  },
  {
    "path": "packed/ui/ui_test_sheet.dds",
    "sha256": "c25e7a13db2d30f8a6e322eaa9801c85d320166f1788a3428c79c2b5e9e208e4",
    "size": 16512,
  },
  {
    "path": "unpack.json",
    "sha256": "688c35b8809f77cdd63d4c6d66516a1c69b8bb6d5825e09157b8b2562c5d7c4d",
    "size": 750,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "508068286e0a4c9637a75433d15779c7cf17a24e2f1d4a41c8423688e002a798",
    "size": 4224,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "343370f1905841cb2509ddebaec33943598c735f721906bf933f261dd86000a3",
    "size": 4224,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "8450593fedf5a4d9288b558eb5e3c07424984d0c82ed43eefb98c1d641b9a5b3",
    "size": 4224,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "28fc70fb441016d921d04369a343667e5e8f88971def3ddf9faa36b4becbfb29",
    "size": 4224,
  },
]
`;
